--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ http://www.templatemo.com/tm-466-cafe-house
           
           <a href="#main" class="tm-more-button tm-more-button-welcome">About Me</a>      
         </div>
-        <img src="https://images.pexels.com/photos/6192127/pexels-photo-6192127.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Table Set" class="tm-table-set img-responsive">             
+        <img src="" alt="Table Set" class="tm-table-set img-responsive">             
       </div>      
     </section>
     <div class="tm-main-section light-gray-bg">
