--- a/computer.html
+++ b/computer.html
@@ -193,7 +193,7 @@ http://www.templatemo.com/tm-466-cafe-house
           
           <div class="col-lg-12 tm-popular-items-container">
             <div class="tm-popular-item">
-              <img src="./img/laptops/Acer aspire.jpg" alt="Popular" class="tm-popular-item-img">
+              <img src="./img/laptops/HP 820-G3.jpg" alt="Popular" class="tm-popular-item-img">
               <div class="tm-popular-item-description">
                 <h3 class="tm-handwriting-font tm-popular-item-title"><span class="tm-handwriting-font bigger-first-letter">HP</span>820-G3</h3><hr class="tm-popular-item-hr">
                 <p>HP 820-G3 core i7 6th 8 Generation</p>
