--- a/camera.html
+++ b/camera.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cafe House Template</title>
+  <title>Tech</title>
 <!-- 
 Cafe House Template
 http://www.templatemo.com/tm-466-cafe-house
@@ -170,7 +170,7 @@ http://www.templatemo.com/tm-466-cafe-house
                 <li><a href="#">Our Services</a></li>
               </ul>
             </nav>
-            <div class="col-lg-5 col-md-5 tm-footer-div">
+<!--             <div class="col-lg-5 col-md-5 tm-footer-div">
               <h3 class="tm-footer-div-title">About Us</h3>
               <p class="margin-top-15">Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</p>
               <p class="margin-top-15">Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus.</p>
@@ -185,7 +185,7 @@ http://www.templatemo.com/tm-466-cafe-house
                 <a href="#" class="tm-social-icon"><i class="fa fa-youtube"></i></a>
                 <a href="#" class="tm-social-icon"><i class="fa fa-behance"></i></a>
               </div>
-            </div>
+            </div> -->
           </div>          
         </div>  
       </div>      
